<resources>
    <string name="app_name">TaskUserDetails</string>


    <string name="login">Login</string>
    <string name="mobile_number_hint">1234567890</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Id</string>
    <string name="list_name">User Details List</string>

</resources>