<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsSemiBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textColor="@color/dark_purple"
            android:textSize="@dimen/_24ssp" />


        <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/mobile"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">

            <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:text="+91"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsEditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/edit_text_background"
                android:digits="0123456789"
                android:hint="@string/mobile_number_hint"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

        <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/edit_text_background"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />

        <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="@dimen/_15sdp"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"/>

    </LinearLayout>



    <ProgressBar
        android:id="@+id/prgbar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />


</RelativeLayout>