<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".adapter.UserDetailsListAdapter">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_7sdp"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardElevation="@dimen/_3sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:background="@drawable/card_view_bg">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                   >
                    <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsSemiBoldTextView
                        android:id="@+id/first_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_name"
                        style="@style/ListViewSemiBoldTextItem"

                        />
                    <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsSemiBoldTextView
                        android:id="@+id/last_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_name"
                        style="@style/ListViewSemiBoldTextItem"
                        android:layout_toRightOf="@+id/first_name_text"
                       />
                </RelativeLayout>

                <com.exxceliqsolutiions.taskuserdetails.utility.UserDetailsTextView
                    android:id="@+id/email_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    style="@style/ListViewTextItem"
                    android:layout_marginTop="-10dp"
                    />

            </LinearLayout>
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="right"
                android:scaleType="fitXY"
                android:src="@drawable/card_view_bg"/>






        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>